Added all project files

--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,7 @@ body {
   letter-spacing: 1px;
 }
 
-.chrome-button3 {
+/* .chrome-button3 {
   background-color: #6ec1e4;
   border: none;
   padding: 10px 15px;
@@ -159,4 +159,4 @@ body {
   font-weight: bold;
   margin-left: 80px;
   cursor: pointer;
-}
+} */
